--- a/stack/todo-app.yml
+++ b/stack/todo-app.yml
@@ -26,6 +26,8 @@ services:
     image: registry:5000/ch04/todoapi:latest
     deploy:
       replicas: 2
+      placement:
+        constraints: [node.role != manager]
     environment:
       TODO_BIND: ":8080"
       TODO_MASTER_URL: "gihyo:gihyo@tcp(todo_mysql_master:3306)/tododb?parseTime=true"
